Order and UserDefinedId properties removed and validation error class property added to textbox properties. Textbox validation error class viewed over conditions in Form Preview component.

--- a/NgImFormBootstrap/src/app/modules/form-preview/form-preview.component.html
+++ b/NgImFormBootstrap/src/app/modules/form-preview/form-preview.component.html
@@ -14,8 +14,10 @@
                                     <div class="form-group mb-3" [hidden]="element.textBoxComponent.isHidden">
                                         <label class="mb-1"><b>{{element.textBoxComponent.label}}</b></label>
                                         <input type="{{element.textBoxComponent.type}}"
-                                            class="{{element.textBoxComponent.class}}"
-                                            placeholder="{{element.textBoxComponent.placeholder}}"
+                                            class="{{element.textBoxComponent.class}}" [ngClass]="
+                                                (isSubmitClicked && form.controls[element.textBoxComponent.name].errors) ?
+                                                element.textBoxComponent.validationErrorClass : ''
+                                            " placeholder="{{element.textBoxComponent.placeholder}}"
                                             formControlName="{{element.textBoxComponent.name}}"
                                             [readOnly]="element.textBoxComponent.isReadOnly">
 
