--- a/NgImFormBootstrap/src/app/modules/form-builder/textbox-properties-sidepanel/textbox-properties-sidepanel.component.html
+++ b/NgImFormBootstrap/src/app/modules/form-builder/textbox-properties-sidepanel/textbox-properties-sidepanel.component.html
@@ -22,14 +22,6 @@
           <hr>
 
           <div class="form-group mb-2">
-            <label class="mb-1"><b>Order*</b></label>
-            <input type="number" class="form-control" formControlName="order">
-            <small
-              *ngIf="isSubmitClicked && form.controls['order']?.errors && form.controls['order']?.errors?.['required']"
-              class="text-danger">Order is Required!</small>
-          </div>
-
-          <div class="form-group mb-2">
             <label class="mb-1"><b>Name*</b></label>
             <input type="text" class="form-control" formControlName="name">
             <small
@@ -68,11 +60,8 @@
           </div>
 
           <div class="form-group mb-2">
-            <label class="mb-1"><b>User Defined Id</b></label>
-            <input type="text" class="form-control" formControlName="userDefinedId">
-            <small
-              *ngIf="isSubmitClicked && form.controls['userDefinedId']?.errors && form.controls['userDefinedId']?.errors?.['required']"
-              class="text-danger">User Defined ID is Required!</small>
+            <label class="mb-1"><b>Validation Error Class</b></label>
+            <input type="text" class="form-control" formControlName="validationErrorClass">
           </div>
 
           <div class="form-group mb-2">
